<resources>
    <string name="app_name">VisitingCard</string>
    <string name="shakiba_e_nur">Shakiba-E-Nur</string>
    <string name="android_developer">Android Developer</string>
    <string name="_8801931952647">+8801931952647</string>
    <string name="shakibaenur2612_gmail_com">shakibaenur2612@gmail.com</string>
    <string name="https_www_linkedin_com_in_shakiba_e_nur_n802a37124">https://www.linkedin.com/in/shakiba-e-nur-802a37124/</string>
    <string name="https_github_com_shakiba_e_nur">https://github.com/Shakiba-e-nur</string>
</resources>