<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        android:background="@color/white"
        android:elevation="@dimen/dp_12"
        android:padding="@dimen/dp_4"
        app:cardCornerRadius="@dimen/dp_8"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/dp_124"
                android:layout_height="@dimen/dp_124"
                android:layout_marginLeft="@dimen/dp_42"
                android:layout_marginTop="@dimen/dp_64"
                android:elevation="@dimen/dp_12"
                android:src="@drawable/shakiba"
                app:civ_border_color="@color/white"
                app:civ_border_width="@dimen/dp_2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_42"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/shakiba_e_nur"
                android:textColor="@color/black"
                android:textSize="12dp"
                app:layout_constraintStart_toEndOf="@+id/profile_image"
                app:layout_constraintTop_toTopOf="@+id/profile_image" />

            <TextView
                android:id="@+id/profile_designation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/android_developer"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/profile_image"
                app:layout_constraintTop_toBottomOf="@+id/profile_name" />

            <TextView
                android:id="@+id/profile_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:fontFamily="@font/poppins_bold"
                android:text="Robi 10 Minute School"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/profile_image"
                app:layout_constraintTop_toBottomOf="@+id/profile_designation" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginRight="@dimen/dp_12"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_marginBottom="@dimen/dp_12"
            android:src="@drawable/phone"
            app:civ_border_color="@color/white"
            app:civ_border_width="@dimen/dp_2" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/_8801931952647"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/layout1">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_marginBottom="@dimen/dp_12"
            android:src="@drawable/gmail"
            app:civ_border_color="@color/white"
            app:civ_border_width="@dimen/dp_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/shakibaenur2612_gmail_com"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/layout2">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_marginBottom="@dimen/dp_24"
            android:src="@drawable/linkedin"
            app:civ_border_color="@color/white"
            app:civ_border_width="@dimen/dp_2" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/https_www_linkedin_com_in_shakiba_e_nur_n802a37124"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/layout3">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_marginBottom="@dimen/dp_12"
            android:src="@drawable/github"
            app:civ_border_color="@color/white"
            app:civ_border_width="@dimen/dp_2" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/https_github_com_shakiba_e_nur"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
